--- a/timeOfDay.html
+++ b/timeOfDay.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-	   <title>HAHAHAEveryDay</title>
-	   <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    </head>
-   
-   <body>
-   	<div id="centeredBox">
+<head>
+    <!--Support of foreigh character-->
+    <meta charset="utf-8">
+    <!--IE Compatibility Setting, "IE=Edge ensures IE uses the latest rendering engine-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Get physical width of the movile device-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Name of your website displayed on the browser tab-->
+    <title>MMP240</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- custom css -->
+    <link rel="stylesheet" href="custom.css">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-   		<h1>Weclone to HAHA  </br> I hope u will get some fun </h1>
-   		<h2>HAHA</h2>
-      <img src="image/hahaha.jpg">
-   		<p>HunryLeung <a href="https://www.facebook.com/hunry.leung">https://www.facebook.com/hunry.leung</a></p>
-   		<script src="js/timeOfDay.js"></script>
-   	</div>
+    <title>HAHAHAEveryDay</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body>
+    <div class="container" id="centeredBox">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h1>Weclone to HAHA  </br> I hope u will get some fun </h1>
+                <h2>HAHA</h2>
+                <img src="image/4.jpg" class="img-responsive">
+                <img src="image/3.jpg" class="img-responsive">
+                <img src="image/2.jpg" class="img-responsive">
+                <img src="image/1.jpg" class="img-responsive">
+            </div>
+        </div>
+
+        <p>HunryLeung <a href="https://www.facebook.com/hunry.leung">https://www.facebook.com/hunry.leung</a>
+        </p>
+        <script src="js/timeOfDay.js"></script>
+    </div>
 
 
-       </body>
-            </html>
+</body>
+
+</html>
